Fixed compile errors after cherry-picking from master branch.