@@ -12,8 +12,8 @@ import org.elasticsearch.index.Index;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -84,7 +84,7 @@ public class TransportPutFollowActionTests extends ESTestCase {
         List<Index> backingIndices = Arrays.stream(backingIndexNames)
             .map(value -> new Index(value, "uuid"))
             .collect(Collectors.toList());
-        return new DataStream(name, new TimestampField("@timestamp"), backingIndices, generation, Map.of());
+        return new DataStream(name, new TimestampField("@timestamp"), backingIndices, generation, Collections.emptyMap());
     }
 
 }
